tests/build/cases/ui_node/invalid_args.stderr
error: expected `child`, `children`, `children_iter`, `delegate`, `delegate_list` or `delegate_iter`
 --> cases/ui_node/invalid_args.rs:4:11
  |
4 | #[ui_node(invalid_arg)]
  |           ^^^^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_args.rs:1:30
  |
1 | use zero_ui::core::{ui_node, UiNode};
  |                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
